# pyzahidal

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: README.md  core-concepts.md  index.md  quickstart.md  recipes.md
docs/stylesheets/: docs.css
scripts/: __init__.py  capture_docs_screenshots.py  check_release.py  curated_eval.js  curated_scrape.js  docs.py  generate_docs.py
src/pyzahidal/: __init__.py  base.py  primitives.py  rendering.py  sections.py  templates.py  theme.py
tests/: test_docs.py  test_release.py  test_rendering.py
